--- a/nieuwe/index.html
+++ b/nieuwe/index.html
@@ -618,7 +618,7 @@
         </div>
 
         <div id="thanks"
-             class="gap-2 md:gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-8 md:scroll-mt-[55px]">
+             class="gap-2 md:gap-4 w-full flex flex-col-reverse md:grid grid-cols-6 pointer-events-auto scroll-mt-8 md:scroll-mt-[55px]">
 
             <div
                  class="col-span-2 sticky top-[55px] text-sm  h-fit flex items-center justify-between gap-1">
