--- a/nieuwe/index.html
+++ b/nieuwe/index.html
@@ -4,22 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pablo.works</title>
+    <title>PABLO MORENO</title>
 
+    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Pablo M." />
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
     <link href="assets/css/output.css" rel="stylesheet">
     <link href="assets/css/more.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/slideFrame.css" />
-    <link rel="stylesheet" type="text/css" href="assets/flickity.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/slideFrame.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/flickity.min.css" />
 
 </head>
 
 <body class="scroll-smooth bg-[#EAEAEA]">
 
     <!-- GRADIENT TOP -->
-    <!-- <div id="gradient-top"
+    <div id="gradient-top"
          class="h-[25px] from-grad-black to-transparent bg-linear-to-b fixed top-0 left-0 w-full z-50  opacity-0 transition duration-400">
-    </div> -->
+    </div>
 
     <!-- CLOCK -->
     <!-- <div
@@ -32,12 +38,11 @@
         <span class=""></span>
     </div> -->
 
-
-    <div id="works"
+    <div
          class="flex relative flex-col font-semibold pointer-events-none p-3 pt-0 md:pt-[calc(50vh-30px)]">
 
         <div id="pablo"
-             class="gap-3 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-8 md:scroll-mt-[calc] md:sticky top-0 py-4 md:py-3 mb-10 md:mb-[50vh] z-10 h-screen md:h-fit justify-between">
+             class="gap-3 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)] md:sticky top-0 py-4 md:py-3 mb-10 md:mb-[50vh] h-screen md:h-fit justify-between z-30">
 
             <div
                  class="absolute top-0 left-0 h-[110px] md:h-[80px] w-full bg-linear-to-b from-[#EAEAEA] from-60% to-transparent">
@@ -49,17 +54,19 @@
                  class="col-span-2 sticky top-3 text-sm h-fit flex items-center justify-between gap-1 md:pb-0 z-10">
 
                 <div id="intro-photo"
-                     class="rounded-full aspect-square group relative transition-opacity delay-150 duration-1000 opacity-0 h-[30px] w-[30px] cursor-pointer shadow-big">
-                    <img src="assets/pablo-moreno.jpg" alt=""
+                     class="rounded-full aspect-square group relative transition-opacity delay-150 duration-1000 opacity-0 h-[30px] w-[30px] cursor-pointer shadow-big"
+                     onclick="alert('♻️ Presentation website made by Pablo on November 2025. Hancoded using HTML+CSS+JS and Tailwind CSS. Hosted in Netlify. ♻️')">
+                    <img src="assets/pablo-moreno.webp" alt=""
                          class="absolute transition duration-600 ease-out aspect-square h-[30px] w-[30px] rounded-full group-hover:scale-90">
-                    <img src="assets/ball.png" id="ball" alt=""
+                    <img src="assets/ball.webp" id="ball" alt=""
                          class="rotate-360 absolute translate-x-[120%] group-hover:opacity-100 group-hover:rotate-0 group-hover:translate-none transition opacity-0 duration-600 ease-out aspect-square h-[30px] w-[30px] rounded-full z-0">
                 </div>
 
                 <h3 id="intro-texto"
-                    class="w-full text-white bg-black px-2 h-[30px] rounded-[6px] flex items-center gap-2 transition-opacity delay-300 duration-1000 opacity-0 z-10 shadow-big">
-                    PABLO <span class="inline md:hidden">M.</span> <span class="hidden md:inline">MORENO</span><span
-                          class="text-grey">Handmade (web) designer
+                    class="w-full text-black bg-[#B0FD45] px-2 h-[30px] rounded-[6px] flex items-center gap-2 transition-opacity delay-300 duration-1000 opacity-0 z-10 shadow-big">
+                    <span class="inline md:hidden">PABLO M.</span><span class="hidden md:inline">PABLO
+                        MORENO</span><span
+                          class="text-gray-500">Handmade (web) designer
                     </span>
                 </h3>
 
@@ -70,7 +77,7 @@
                 <a href="#today"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-[#11C3FF]">
                     TODAY
-                </a> I whom to show my
+                </a> I whom to show
                 <a href="#highlighted"
                    class="mx-px leading-tight transition-colors duration-200 cursor-pointer text-grey hover:text-[#E90801]">
                     HIGHLIGHTED
@@ -93,10 +100,10 @@
         </div>
 
         <div id="today"
-             class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-8 md:scroll-mt-[calc] mb-20 md:mb-[25vh]">
+             class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)] mb-20 md:mb-[25vh]">
 
             <div
-                 class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm  h-fit flex items-center justify-between gap-1 ">
+                 class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm  h-fit flex items-center justify-between gap-1 mb-2 ">
 
                 <div
                      class="text-sm text-[#FFFF2A] bg-[#11C3FF] px-2 py-1 rounded-full aspect-square w-[30px] h-[30px] flex items-center justify-center shadow-big">
@@ -127,16 +134,16 @@
         </div>
 
         <div id="highlighted"
-             class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-8 md:scroll-mt-[calc] mb-20 md:mb-[25vh]">
+             class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)] mb-20 md:mb-[25vh]">
 
             <div
-                 class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm  h-fit flex items-center justify-between gap-1 z-10">
+                 class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm  h-fit flex items-center justify-between gap-1 mb-2 z-10">
 
                 <div
-                     class="text-sm text-red-100 bg-[#E90801] px-2 py-1 rounded-full aspect-square w-[30px] h-[30px] flex items-center justify-center shadow-big">
+                     class="text-sm text-white bg-[#E90801] px-2 py-1 rounded-full aspect-square w-[30px] h-[30px] flex items-center justify-center shadow-big">
                     2</div>
                 <h3
-                    class="w-full text-red-100 bg-[#E90801] px-2 h-[30px] rounded-[6px] flex items-center shadow-big">
+                    class="w-full text-white bg-[#E90801] px-2 h-[30px] rounded-[6px] flex items-center shadow-big">
                     HIGHLIGHTED PROJECTS
                 </h3>
             </div>
@@ -267,10 +274,10 @@
         </div>
 
         <div id="websites"
-             class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-8 md:scroll-mt-[calc] mb-20 md:mb-[25vh]">
+             class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)] mb-20 md:mb-[25vh]">
 
             <div
-                 class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm  h-fit flex items-center justify-between gap-1">
+                 class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm  h-fit flex items-center justify-between gap-1 mb-2">
                 <div
                      class="text-[#917400] bg-[#fad74b] px-2 py-1 rounded-full aspect-square w-[30px] h-[30px] flex items-center justify-center shadow-big">
                     3</div>
@@ -308,10 +315,10 @@
         </div>
 
         <div id="resume"
-             class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-8 md:scroll-mt-[calc] mb-20 md:mb-[25vh]">
+             class="gap-4 w-full flex flex-col md:grid grid-cols-6 pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)] mb-20 md:mb-[25vh]">
 
             <div
-                 class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm  h-fit flex items-center justify-between gap-1">
+                 class="col-span-2 sticky top-4 md:top-[calc(50vh-30px)] text-sm  h-fit flex items-center justify-between gap-1 mb-2 z-10">
 
                 <div
                      class="text-black bg-white px-2 py-1 rounded-full aspect-square w-[30px] h-[30px] flex items-center justify-center shadow-big">
@@ -556,7 +563,7 @@
         </div>
 
         <div id="contact"
-             class="gap-4 w-full flex flex-col pointer-events-auto scroll-mt-8 md:scroll-mt-[calc] mb-10">
+             class="gap-4 w-full flex flex-col pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)] mb-10">
 
             <div class="flex flex-col gap-4 w-full md:grid grid-cols-6">
                 <div
@@ -584,7 +591,8 @@
                     </div>
                     <div>
                         <h4 class="text-grey text-sm uppercase">Adress</h4>
-                        <a href="" class="hover:text-grey duration-300 text-lg">Voorburgstraat 123<br>1062 JB,
+                        <a href="https://maps.app.goo.gl/6rbqSvFVWe6v79Pd9" target="_blank"
+                           class="hover:text-grey duration-300 text-lg">Voorburgstraat 123<br>1062 JB,
                             Amsterdam</a>
                     </div>
                 </div>
@@ -610,7 +618,7 @@
                         to go deeper on the projects and abilities I can provide.</p>
 
                     <a href="tel:+31613381141"
-                       class="bg-black inline-flex gap-3 rounded-full py-3 justify-center text-white px-20 hover:bg-[#35C759] mx-auto transition duration-300 items-center mt-6 text-xl shadow-big">Call
+                       class="bg-[#35C759] inline-flex gap-3 rounded-full py-3 justify-center text-white px-20 hover:bg-[#22aa44] mx-auto transition duration-300 items-center mt-6 text-xl shadow-big">Call
                         <svg
                              xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 24 24"
@@ -628,20 +636,20 @@
         </div>
 
         <div id="thanks"
-             class="gap-2 md:gap-4 w-full flex flex-col-reverse md:grid grid-cols-6 pointer-events-auto scroll-mt-8 md:scroll-mt-[calc]">
+             class="gap-2 md:gap-4 w-full flex flex-col-reverse md:grid grid-cols-6 pointer-events-auto scroll-mt-3 md:scroll-mt-[calc(50vh-30px)]">
 
             <div
                  class="col-span-6 sticky top-[55px] text-sm  h-fit flex items-center justify-between gap-1">
 
                 <div
-                     class="text-zinc-500 bg-zinc-200 px-2 py-1 rounded-full aspect-square w-[30px] h-[30px] flex items-center justify-center shadow-big hover:shadow-none">
+                     class="text-white bg-black px-2 py-1 rounded-full aspect-square w-[30px] h-[30px] flex items-center justify-center shadow-big hover:shadow-none">
                     ⏳</div>
                 <h3
-                    class="w-full text-zinc-500 bg-zinc-200 px-2 h-[30px] rounded-[6px] flex items-center justify-between shadow-big">
+                    class="w-full text-white bg-black px-2 h-[30px] rounded-[6px] flex items-center justify-between shadow-big">
                     THANKS FOR YOUR TIME
                     <div
                          class="flex gap-2 col-span-4 justify-end items-center text-sm">
-                        <p class="text-zinc-400"><span class="hidden md:inline">You have spent</span> <span
+                        <p class="text-grey"><span class="hidden md:inline">You spent</span> <span
                                   id="visit-timer"></span> in this
                             website</p>
                     </div>
@@ -654,8 +662,8 @@
     </div>
 
     <script src="assets/js/works.js"></script>
-    <script src="assets/slideFrame.min.js"></script>
-    <script src="assets/flickity.pkgd.min.js"></script>
+    <script src="assets/js/slideFrame.min.js"></script>
+    <script src="assets/js/flickity.pkgd.min.js"></script>
 
 
 </body>
