--- a/nieuwe/index.html
+++ b/nieuwe/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PABLO MORENO</title>
 
-    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <!-- <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Pablo M." />
-    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" /> -->
 
     <link href="assets/css/output.css" rel="stylesheet">
     <link href="assets/css/more.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/slideFrame.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/flickity.min.css" />
 
+    <link id="dynamic-favicon" rel="icon" href="">
 </head>
 
 <body class="scroll-smooth bg-[#EAEAEA]">
@@ -26,17 +27,6 @@
     <div id="gradient-top"
          class="h-[25px] from-grad-black to-transparent bg-linear-to-b fixed top-0 left-0 w-full z-50  opacity-0 transition duration-400">
     </div>
-
-    <!-- CLOCK -->
-    <!-- <div
-         class="absolute top-0 right-0 gap-0 m-5 font-semibold text-sm leading-tight md:fixed text-md text-grey border border-grey p-2 rounded-full items-center hidden md:flex aspect-square">
-
-        <div class="flex gap-0 items-center justify-center"><span id="clockH">23</span> <span class="flashing ">:</span>
-            <span
-                  id="clockM">23</span>
-        </div>
-        <span class=""></span>
-    </div> -->
 
     <div
          class="flex relative flex-col font-semibold pointer-events-none p-3 pt-0 md:pt-[calc(50vh-30px)]">
@@ -116,7 +106,7 @@
 
             </div>
 
-            <div class="flex flex-col md:grid grid-cols-2 gap-4 col-span-4 ml-9">
+            <div class="flex flex-col md:grid grid-cols-2 gap-4 col-span-4 ml-9 md:ml-0">
                 <div>
                     <h4 class="text-grey text-sm">WHERE I'M FROM</h4>
                     <p class="text-lg">Blablabla</p>
@@ -349,7 +339,7 @@
 
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group fade-loop">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="">2026</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
@@ -370,7 +360,7 @@
                 <!-- 2025 - DEsigner at Analogue -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2025</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
@@ -392,7 +382,7 @@
                 <!-- 2024 – Intern at Analogue -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2024</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
@@ -413,7 +403,7 @@
                 <!-- 2024 – Mentor for AFEV association -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2024</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
@@ -434,7 +424,7 @@
                 <!-- 2024 – Welcomer at Maison de la Culture -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2024</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
@@ -455,7 +445,7 @@
                 <!-- 2024↑2022 – Double master in UX/UI at ESAD -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2024<br>↑2022</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
@@ -476,7 +466,7 @@
                 <!-- 2022 – Internship at Cuchillo -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2022</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
@@ -497,7 +487,7 @@
                 <!-- 2021↑2019 – Bachelor Interactive Graphic Design at ESADHaR -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2021<br>↑2019</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
@@ -519,7 +509,7 @@
                 <!-- 2018 – Internship at M.U.R.R -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2018</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full">
@@ -540,7 +530,7 @@
                 <!-- 2018↑2016 – License in type design at Estienne -->
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group">
-                    <div class="w-[70px]">
+                    <div class="w-[90px]">
                         <span class="text-grey group-hover:text-black transition duration-300">2018<br>↑2016</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full">
@@ -579,7 +569,7 @@
                 </div>
 
 
-                <div class="flex flex-col md:grid grid-cols-3 gap-4 col-span-4 ml-9 md:ml-0">
+                <div class="flex flex-col md:grid grid-cols-2 gap-4 col-span-4 ml-9 md:ml-0">
                     <div>
                         <h4 class="text-grey text-sm uppercase">PHONE</h4>
                         <a href="tel:+31613381141" class="hover:text-grey duration-300 text-lg">+31 (0)6 13 38 11 41</a>
@@ -591,9 +581,12 @@
                     </div>
                     <div>
                         <h4 class="text-grey text-sm uppercase">Adress</h4>
-                        <a href="https://maps.app.goo.gl/6rbqSvFVWe6v79Pd9" target="_blank"
-                           class="hover:text-grey duration-300 text-lg">Voorburgstraat 123<br>1062 JB,
-                            Amsterdam</a>
+                        <span>Voorburgstraat 123<br>
+                            Amsterdam</span>
+                    </div>
+                    <div>
+                        <h4 class="text-grey text-sm uppercase">KVK number</h4>
+                        <span>Pending</span>
                     </div>
                 </div>
             </div>
@@ -601,7 +594,7 @@
 
 
             <div id="call"
-                 class="flex flex-col md:grid grid-cols-8 gap-4 md:gap-10 h-[70vh] md:h-[90vh] items-center justify-center pointer-events-auto px-3">
+                 class="flex flex-col md:grid grid-cols-8 gap-4 md:gap-10 h-[70vh] md:h-[85vh] items-center justify-center pointer-events-auto px-3">
                 <div
                      class="video w-full h-fit rounded-4xl overflow-hidden relative transition duration-300 bg-white col-span-4 col-start-2">
                     <video id="randomVideo" width="320" height="240" autoplay loop playsinline muted
@@ -650,8 +643,7 @@
                     <div
                          class="flex gap-2 col-span-4 justify-end items-center text-sm">
                         <p class="text-grey"><span class="hidden md:inline">You spent</span> <span
-                                  id="visit-timer"></span> in this
-                            website</p>
+                                  id="visit-timer"></span> here</p>
                     </div>
                 </h3>
 
@@ -661,7 +653,7 @@
         </div>
     </div>
 
-    <script src="assets/js/works.js"></script>
+    <script src="assets/js/index.js"></script>
     <script src="assets/js/slideFrame.min.js"></script>
     <script src="assets/js/flickity.pkgd.min.js"></script>
 
