--- a/nieuwe/index.html
+++ b/nieuwe/index.html
@@ -56,7 +56,7 @@
                     class="w-full text-black bg-[#B0FD45] px-2 h-[30px] rounded-[6px] flex items-center gap-2 transition-opacity delay-300 duration-1000 opacity-0 z-10 shadow-big">
                     <span class="inline md:hidden">PABLO M.</span><span class="hidden md:inline">PABLO
                         MORENO</span><span
-                          class="text-gray-500">Handmade (web) designer
+                          class="text-grey">Handmade &lt;web&gt; designer
                     </span>
                 </h3>
 
