--- a/nieuwe/index.html
+++ b/nieuwe/index.html
@@ -340,7 +340,7 @@
                 <div
                      class="listStack flex gap-4 text-base md:text-lg group hover:bg-zinc-200 p-2 rounded-[8px] transition duration-300 cursor-pointer group fade-loop">
                     <div class="w-[90px]">
-                        <span class="">2026</span>
+                        <span class="">Now</span>
                     </div>
                     <div class="leading-tight flex flex-col w-full gap-1">
                         <div class="flex gap-2 items-center">
